--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="https://t4.ftcdn.net/jpg/05/94/39/47/360_F_594394711_JcBD8PvFX2Tewf62YtuCHj57fcPxN7AZ.jpg"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmwcGOp7ohi7PlIgqoecF2umNNNPuLiDdpiw&s"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
